--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.13",
+    "@stimulus-components/rails-nested-form": "^5.0.0",
     "stimulus-autocomplete": "^3.1.0",
     "swiper": "^11.2.6",
     "tailwindcss-stimulus-components": "^6.1.3"
