--- a/config/storage.yml
+++ b/config/storage.yml
@@ -13,6 +13,7 @@ amazon:
   secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
   region:            <%= ENV['AWS_REGION'] %>
   bucket:            <%= ENV['AWS_BUCKET'] %>
+  public: true
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
