--- a/compose.yml
+++ b/compose.yml
@@ -27,11 +27,19 @@ services:
       - node_modules:/myapp/node_modules
     environment:
       TZ: Asia/Tokyo
+      SELENIUM_DRIVER_URL: http://selenium_chrome:4444/wd/hub
     ports:
       - "3000:3000"
     depends_on:
       db:
         condition: service_healthy
+      chrome:
+        condition: service_started
+  chrome:
+    image: seleniarm/standalone-chromium:latest
+    shm_size: 512m
+    ports:
+      - 4444:4444
 volumes:
   bundle_data:
   postgresql_data:
