fix: ActionView::Template::Errorの対応

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,7 @@ jobs:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432
           # REDIS_URL: redis://localhost:6379/0
         run: |
+          bundle exec rake assets:precompile
           bin/rails db:test:prepare
           bundle exec rspec
 
