--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,3 +8,5 @@ inherit_gem: { rubocop-rails-omakase: rubocop.yml }
 # # Use `[a, [b, c]]` not `[ a, [ b, c ] ]`
 # Layout/SpaceInsideArrayLiteralBrackets:
 #   Enabled: false
+Layout/SpaceInsideArrayLiteralBrackets:
+  Enabled: false
