fix: Copilotからの指摘事項を修正
Copilotから指摘された個所を修正しました。
・'owner/my_repo'→'${{ github.repository }}'
・dependabot/fetch-metadata@d7267f607e9d3fb96fc2fbe83e0af444713e90b7→dependabot/fetch-metadata@v1
・timeout-minutes: 13→timeout-minutes: 5

#259

--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -12,12 +12,12 @@ permissions:
 jobs:
   dependabot:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'owner/my_repo'
-    timeout-minutes: 13
+    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == "${{ github.repository }}"
+    timeout-minutes: 5
     steps:
       - name: Dependabot metadata
         id: metadata
-        uses: dependabot/fetch-metadata@d7267f607e9d3fb96fc2fbe83e0af444713e90b7
+        uses: dependabot/fetch-metadata@v1
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Enable auto-merge for Dependabot PRs
