--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -12,7 +12,7 @@ permissions:
 jobs:
   dependabot:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == "${{ github.repository }}"
+    if: ${{ github.actor == 'dependabot[bot]' }}
     timeout-minutes: 5
     steps:
       - name: Dependabot metadata
@@ -30,4 +30,5 @@ jobs:
           gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
+          PR_TITLE: ${{ github.event.pull_request.title }}
           GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
