--- a/compose.yml
+++ b/compose.yml
@@ -40,6 +40,15 @@ services:
     shm_size: 512m
     ports:
       - 4444:4444
+  solid_queue:
+    build:
+      dockerfile: Dockerfile.dev
+    environment:
+      RAILS_ENV: development
+    command: bash -c "./bin/jobs"
+    volumes:
+      - .:/myapp
+      - bundle_data:/usr/local/bundle:cashed
 volumes:
   bundle_data:
   postgresql_data:
