--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,14 @@ default: &default
 
 
 development:
-  <<: *default
-  database: myapp_development
+  primary: &primary_development
+    <<: *default
+    database: myapp_development
+  queue:
+    <<: *primary_development
+    database: myapp_development_queue
+    migrations_paths: db/queue_migrate
+
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
