fix: copilotからの指摘箇所を修正
fix_product_names.rb：Like→LIKEに修正。
products/show.html.erb：nofolloe→nofollowに修正。
rakuten_search_controller.js：redioButton→radioButtonに修正。
検索結果表示前に既存の検索結果をリセットするコードを追加。
変数resultUrl、resultImage、resultNameを追加してresultListHtml内のHTMLが簡潔になるように修正。
compose.yml：cashed→cachedに修正。
config/initializers/rakuten.rb：開発環境でのみデバックモードを使用するように修正。
20250816085424_add_rakuten_colum_to_products.rbへの指摘に対しては、マイグレーションファイルなので修正なし。
（ファイル名の誤字修正なので修正なしにします）

--- a/compose.yml
+++ b/compose.yml
@@ -48,7 +48,7 @@ services:
     command: bash -c "./bin/jobs"
     volumes:
       - .:/myapp
-      - bundle_data:/usr/local/bundle:cashed
+      - bundle_data:/usr/local/bundle:cached
 volumes:
   bundle_data:
   postgresql_data:
