--- a/config/database.yml
+++ b/config/database.yml
@@ -95,7 +95,7 @@ production:
     username: myapp
     password: <%= ENV["MYAPP_DATABASE_PASSWORD"] %>
   queue:
-    url: <%= ENV["DATABASE_URL"] %>
+    url: <%= ENV["QUEUE_DATABASE_URL"] %>
     <<: *primary_production
     database: myapp_production_queue
     migrations_paths: db/queue_migrate
