--- a/fly.toml
+++ b/fly.toml
@@ -17,6 +17,10 @@ console_command = '/rails/bin/rails console'
   min_machines_running = 0
   processes = ['app']
 
+[processes]
+	app = "bin/rails fly:server"
+	job = "bin/jobs"
+
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
