--- a/fly.toml
+++ b/fly.toml
@@ -9,17 +9,17 @@ console_command = '/rails/bin/rails console'
 
 [build]
 
-[http_service]
+[processes]
+	app = "bin/rails fly:server"
+	job = "bin/jobs"
+
+[[http_service]]
   internal_port = 3000
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
-
-[processes]
-	app = "bin/rails fly:server"
-	job = "bin/jobs"
 
 [[vm]]
   memory = '1gb'
