--- a/fly.toml
+++ b/fly.toml
@@ -10,10 +10,10 @@ console_command = '/rails/bin/rails console'
 [build]
 
 [processes]
-	app = "bin/rails fly:server"
+	app = "bin/rails server"
 	job = "bin/jobs"
 
-[[http_service]]
+[http_service]
   internal_port = 3000
   force_https = true
   auto_stop_machines = 'stop'
